updated spacing on footer links, update z index on udraw image and corrected syntax on two items on css file

--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ display: flex;
 img {
 width: 100%;
 height: 100%;
-max-height:50vh; /* not in Dave's file remove?*/
-padding: 20px; /* not in Dave's file remove?*/
+
 }
 
 
@@ -175,6 +174,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    padding-bottom: 50px;
    
 }
 
@@ -186,9 +186,9 @@ align-items: center;
 }
 
 .header__img--wrapper {
-padding: 20px;  
-/*May need to add this to show the wave on larger screens
-z-index: 50;*/
+/*padding: 20px;  */
+z-index: 2;
+position:relative;
     
 }
 
@@ -296,7 +296,7 @@ align-items: center;
 margin: 0 auto;
 }
 
-.highlight_para {
+.highlight__para {
 text-align: center;
 max-width: 280px;
 }
@@ -475,6 +475,7 @@ color: white;
 
 .footer__list {
 margin: 20px 0 24px 0;
+
 }
 
 .footer__links {
@@ -482,10 +483,16 @@ margin-bottom: 24px;
 color: white;
 }
 
+.footer__link {
+    color: white;
+    margin: 0 10px;
+}
+
 /*SMALL PHONES, TABLETS, LARGE SMARTPHONES*/
 
 @media (max-width:768px) {
-.header_description {
+
+.header__description {
 padding: 0 24px;
 }
 
@@ -509,11 +516,11 @@ width: 50%;
 width: 100%;
 }
 
-}
-
 .recent {
         width: 50%; /* This will make two books fit per row on the latest books section (I hope) */
     }
+
+}
 
 /*SMALL PHONES, LARGE SMARTPHONES*/
 
